--- a/style.css
+++ b/style.css
@@ -12,8 +12,23 @@ header {
     text-align: center;
 }
 
+header h1{
+    font-size: 35px ;
+}
+
+header span{
+    text-transform: capitalize;
+    color: yellow;
+    text-decoration: underline;
+}
+
+header p{
+    font-size: 18px;
+    color: rgb(131, 255, 127);
+}
+
 main {
-    padding: 80px;
+    padding: 20px;
 }
 
 h2 {
@@ -27,8 +42,7 @@ h2 {
     margin-top: 10px;
 }
 
-/* Section contact */
-/* Section Contact */
+
 /* Section Contact */
 #contact {
     background-color: #f8f9fa;
@@ -99,7 +113,7 @@ h2 {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #5e5e5e;
+    background-color: #1d416c;
     color: white;
     margin-top: 20px;
 }
