--- a/style.css
+++ b/style.css
@@ -61,7 +61,13 @@ h2 {
   margin-bottom: 30px;
 }
 #contact .info {
-  font-size: 25px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: #222;
+  line-height: 1.6;
+  margin: 20px auto;
+  max-width: 750px;
 }
 
 .contact-locations {
